<resources>
    <string name="app_name">Note IT</string>


    <!--主界面相关-->
    <string name="main_category_common">类别</string>
    <string name="main_category_empty">还没创建笔记</string>
    <string name="main_category_all">全部</string>
    <string name="main_category_add">新建类别</string>
    <string name="main_category_input">请输入类别</string>
    <string name="main_edit_mode_on">编辑模式已开启</string>
    <string name="main_edit_mode_off">编辑模式已关闭</string>

    <!--编辑相关-->
    <string name="editor_editor_common">编辑</string>
    <string name="editor_create_common">新建笔记</string>
    <string name="editor_create_success">笔记创建完成</string>
    <string name="editor_update_success">笔记保存成功</string>
    <string name="editor_title_common">标题</string>
    <string name="editor_title_input">请输入标题</string>
    <string name="editor_info_common">详细内容</string>
    <string name="editor_info_input">请输入详细内容</string>
    <string name="editor_date_common">日期</string>
    <string name="editor_date_input">请输入日期</string>
    <string name="editor_date_update">更新日期</string>
    <string name="editor_date_update_finish">日期更新完成</string>
    <string name="editor_lock_common">加密</string>
    <string name="editor_lock_locked">已加密</string>
    <string name="editor_lock_unlock">解锁</string>
    <string name="editor_lock_input">请输入密码</string>
    <string name="editor_save_common">保存</string>
    <string name="editor_save_error">编辑器状态错误</string>
    <string name="editor_delete_common">删除</string>
    <string name="editor_delete_confirm">是否要删除所选笔记</string>
    <string name="editor_delete_success">删除成功</string>

    <!--搜索相关-->
    <string name="search_main_name">搜索</string>
    <string name="search_main_input">请输入搜索内容</string>
    <string name="search_main_empty">搜索内容为空</string>
    <string name="search_main_success">搜索完成</string>
    <string name="search_main_result">搜索结果</string>

    <!--登录相关-->
    <string name="login_main_common">登录Note IT</string>
    <string name="login_login_common">登录</string>
    <string name="login_login_success">登录成功</string>
    <string name="login_login_username">用户名</string>
    <string name="login_login_username_input">请输入用户名</string>
    <string name="login_login_account_input">请输入账号</string>
    <string name="login_login_account_error">账号不存在</string>
    <string name="login_register_account_occupy">账号重复</string>
    <string name="login_login_password_input">请输入密码</string>
    <string name="login_login_password_error">密码错误</string>
    <string name="login_register_common">注册</string>
    <string name="login_register_main">注册Note IT</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_public_common">公共账户</string>
    <string name="login_public_use">使用公共账户</string>

    <!--用户相关-->
    <string name="user_username_common">用户名</string>
    <string name="user_username_change_input">新用户名</string>
    <string name="user_username_change">修改用户名</string>
    <string name="user_username_change_success">用户名修改成功</string>
    <string name="user_account_common">账号</string>
    <string name="user_logout_common">注销</string>
    <string name="user_logout_confirm">请确认是否登出</string>
    <string name="user_logout_success">账户已登出</string>
    <string name="user_delete_common">删除账号</string>
    <string name="user_delete_confirm">请确认是否删除账号</string>
    <string name="user_delete_success">账户删除成功</string>
    <string name="user_password_change">修改密码</string>
    <string name="user_password_change_input">请输入新密码</string>
    <string name="user_password_change_success">密码修改成功</string>
    <string name="user_amount_common">已保存笔记：</string>
</resources>