<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:minHeight="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_editor_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/board_round_alpha"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_editor_avtivity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_create_common"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_editor_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/board_round_alpha"
                android:textColor="@color/black"
                app:icon="@drawable/ic_save"
                app:iconGravity="end"
                app:iconTint="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_editor_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:maxWidth="100dp"
            android:maxHeight="50dp"
            android:text="@string/main_category_all"
            android:textColor="@color/black"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_folder"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />
        <Button
            android:id="@+id/bt_editor_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:text="@string/editor_lock_common"
            android:textColor="@color/black"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_lock"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />
        <Button
            android:id="@+id/bt_editor_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:text="@string/editor_date_update"
            android:textColor="@color/black"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_date"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/board_round"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_editor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/board_round_alpha"
            android:ems="10"
            android:hint="@string/editor_title_input"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_editor_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:layout_weight="5"
                android:text="@string/editor_date_common" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_editor_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/board_round_alpha"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editor_info_input"
            android:inputType="textMultiLine" />
    </LinearLayout>

</LinearLayout>