<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.UI.LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/board_round_alpha"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_register_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/login_register_main"
                android:textColor="#000000"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/board_round"
                android:drawableStart="@drawable/ic_user"
                android:ems="10"
                android:hint="@string/login_login_username_input"
                android:inputType="textPersonName"
                android:padding="16dp" />

            <EditText
                android:id="@+id/et_register_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/board_round"
                android:drawableStart="@drawable/ic_account"
                android:ems="10"
                android:hint="@string/login_login_account_input"
                android:inputType="number"
                android:padding="16dp" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/board_round"
                android:drawableStart="@drawable/ic_lock"
                android:ems="10"
                android:hint="@string/login_login_password_input"
                android:inputType="textPersonName|textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/bt_register_register"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/Light_blue"
                android:text="@string/login_register_common"
                android:textSize="16sp"
                app:cornerRadius="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"/>
    </FrameLayout>

</LinearLayout>