<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.UI.UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_user_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/board_round_alpha"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_user_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minWidth="128dp"
                android:minHeight="128dp"
                android:src="@drawable/ic_account" />

            <TextView
                android:id="@+id/tv_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/user_username_common"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_user_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_account_common" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/board_round"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/bt_user_username_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/board_round"
                android:gravity="center|start"
                android:text="@string/user_username_change"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:icon="@drawable/ic_user"
                app:iconTint="@color/black" />

            <Button
                android:id="@+id/bt_user_password_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/board_round_alpha"
                android:gravity="center|start"
                android:text="@string/user_password_change"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:icon="@drawable/ic_lock"
                app:iconTint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/board_round"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/bt_user_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/board_round_alpha"
                android:gravity="center|start"
                android:text="@string/user_logout_common"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:icon="@drawable/ic_logout"
                app:iconTint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/board_round"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/bt_user_account_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/board_round_alpha"
                android:gravity="center|start"
                android:text="@string/user_delete_common"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:icon="@drawable/ic_close"
                app:iconTint="@color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>