<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/tb_main">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>

            <Button
                android:id="@+id/bt_main_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/board_round_alpha"
                android:backgroundTint="@color/white"
                android:text="@string/login_public_common"
                android:textColor="@color/black"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_account"
                app:iconTint="@color/black" />

            <Button
                android:id="@+id/bt_main_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/board_round_alpha"
                android:text="@string/main_category_all"
                android:textColor="@color/black" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/eFab_main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/search_main_name"
        app:icon="@drawable/ic_search"
        app:iconTint="@color/black"
        app:layout_anchor="@id/ctlayout"
        app:layout_anchorGravity="bottom|right|end">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_main_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Light_blue"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_main_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        app:backgroundTint="@color/teal_200"
        app:srcCompat="@drawable/ic_delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_main_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/teal_200"
        app:srcCompat="@drawable/ic_close" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>